--- a/src/main/webapp/css/searchMovies.css
+++ b/src/main/webapp/css/searchMovies.css
@@ -1,3 +1,7 @@
+.img-fluid.rounded {
+    max-width: 6em;
+}
+
 .card-title {
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -6,12 +10,7 @@
     color: #F39422;
 }
 
-.card-authors {
-    color: #537EC5;
-    overflow: hidden;
-}
-
-.card-description {
+.card-overview {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
