--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -1,5 +1,8 @@
-/*
-body {
-    background-color: #293A80;
+.btn {
+  border-radius: 18px;
 }
-*/
+
+i {
+  filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.3));
+}
+
