--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,9 +1,27 @@
-.card-body {
-    min-height: 300px;
-    min-width: 250px;
+.card {
+    max-width: 10em;
     margin: 10px;
 }
 
+.vote_average {
+    color: seagreen;
+    font-weight: bold;
+}
+
+.card-img-top {
+    max-width: 10em;
+}
+
+.card-title {
+    font-size: 15px;
+    font-weight: 600;
+    color: #d63384;
+    height: 3em;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .flex-row::-webkit-scrollbar {
