--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -11,3 +11,33 @@ i {
   font-weight: 500;
 
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 7px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+/*
+.flex-row::-webkit-scrollbar {
+    display: none;
+}*/
