--- a/src/main/webapp/css/moviesPage.css
+++ b/src/main/webapp/css/moviesPage.css
@@ -1,14 +1,21 @@
-.card-text {
-    display: -webkit-box;
-    color: #d63384;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+.card {
+
+}
+
+.card-body {
+    width: 14em;
+
+}
+
+.card-img {
+
 }
 
 .card-title {
+    font-weight: 500;
+    height: 5em;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
