Changed many things for navbar, homepage and added TV shows on home page. And many other things

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -13,6 +13,7 @@
 }
 
 .card-title {
+    height: 3em;
     font-size: 15px;
     font-weight: 600;
     display: -webkit-box;
@@ -20,3 +21,4 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
